--- a/main.html
+++ b/main.html
@@ -358,16 +358,16 @@ into with Sentrilite.
 </style>
 <body>
 <header>
-  <span>Sentrilite: Real-Time System Audit & Observability</span>
+  <span>Sentrilite: Real-Time Multi-Cloud Observability & Security</span>
 <button onclick="downloadHumanReport()" style="
   font-size: 1.0rem;
-  padding: 4px 8px;
+  padding: 4px 6px;
   background: linear-gradient(90deg, #00cc7a, #0099cc);
   color: #ffffff;
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  margin-left: 1em;
+  margin-left: 30em;
   font-weight: 500;
   box-shadow: 0 2px 8px rgba(0, 255, 153, 0.15);
 ">
@@ -385,7 +385,7 @@ into with Sentrilite.
   <!-- Centered upload controls -->
   <div style="text-align: center;">
     <input type="file" id="serverFile" accept=".txt" />
-    <button onclick="uploadServers()">Upload Server List</button>
+    <button onclick="uploadServers()">Upload Node List</button>
     <button onclick="exportDashboard()">Download Dashboard</button>
     <label style="margin-left: 1em;">
       <input type="checkbox" id="checkAll" onchange="toggleAllServers(this)">
