Changes: - Added helm charts for secret-license - Optimized Sentrilite/trace_events - Updated main.html

--- a/main.html
+++ b/main.html
@@ -358,7 +358,7 @@ into with Sentrilite.
 </style>
 <body>
 <header>
-  <span>Sentrilite: Real-Time Multi-Cloud Observability & Security</span>
+  <span>Sentrilite: Hybrid-Cloud Observability & Security</span>
 <button onclick="downloadHumanReport()" style="
   font-size: 1.0rem;
   padding: 4px 6px;
